# libicm20948

./: .gitignore  CMakeLists.txt  ICM20948Config.cmake.in  README.md  icm20948.pc.in
cmake_modules/: FindGPIOD.cmake
debian/: changelog  control  copyright  libicm20948-dev.install  libicm20948.install
examples/: i2c_test.cpp
src/: ICM20948.cpp  ICM20948.h  config.h.cmake  icm20948.c  icm20948.h  icm20948_i2c.c  icm20948_i2c.h  icm20948_spi.c  icm20948_spi.h
